--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://danlehner.github.io/react-jazz-quiz/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
     "immer": "^7.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -14,6 +16,9 @@
     "usestate": "^1.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
